Added ability to create an event with a specific resource

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <h1 class="header__title">Meeting Rooms</h1>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="butAdd" class="headerButton" aria-label="Add"></button>
-    <button id="authorize-button" style="display: none;">Authorize</button>
-    <button id="signout-button" style="display: none;">Sign Out</button>
+    <button id="authorize-button">Authorize</button>
+    <button id="book-room-button">Book room</button>
+    <input id="resourceId" type="text"></input>
+    <button id="signout-button">Sign Out</button>
 
   </header>
 
