adding functions to trim room name and add color, styling header buttons, removing unnecessary styles

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
   <header class="header">
     <h1 class="header__title">Meeting Rooms</h1>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
-    <button id="authorize-button">Authorize</button>
-    <button id="signout-button">Sign Out</button>
+    <button id="authorize-button" class="headerLoginButton">Authorize</button>
+    <button id="signout-button" class="headerLoginButton">Sign Out</button>
 
   </header>
 
