Added success messge when booking room. Also fixed issue where click listener was being added multiple times to the add button for each card

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
       <div class="location name"></div>
       <div class="date type"></div>
       <div class="description"></div>
+      <div class="user-message"></div>
       <button class="reserve-room-button"></button>
     </div>
   </main>
