--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="canonical" href="https://weather-pwa-sample.firebaseapp.com/final/">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Meeting Rooms</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
@@ -50,7 +49,7 @@
       <h2>No rooms match your criteria.</h2>
       <h3>Try changing your filters and search again.</h3>
     </div>
-    <div class="card cardTemplate weather-forecast room" hidden>
+    <div class="card cardTemplate room" hidden>
       <div class="city-key room-key" hidden></div>
       <div class="card-last-updated" hidden></div>
       <div class="location name"></div>
