added buttons and functions to filter for different meeting lengths

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
   <header class="header">
     <h1 class="header__title">Meeting Rooms</h1>
+    <button id="30-minute-button">30 Mins</button>
+    <button id="hour-button">60 Mins</button>
+    <button id="90-minute-button">90 Mins</button>
+    <button id="2-hour-button">120 Mins</button>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="authorize-button" class="headerLoginButton">Authorize</button>
     <button id="signout-button" class="headerLoginButton">Sign Out</button>
