--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Meeting Rooms</title>
+  <title>Get a room</title>
   <link rel="stylesheet" type="text/css" href="styles/inline.css">
 
   <!-- TODO add manifest here -->
@@ -28,7 +28,7 @@
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Meeting Rooms">
+  <meta name="apple-mobile-web-app-title" content="Get a room">
   <link rel="apple-touch-icon" href="images/icons/ms-icon-150x150.png">
   <meta name="msapplication-TileImage" content="images/icons/ms-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#2F3BA2">
@@ -36,7 +36,7 @@
 <body>
 
   <header class="header">
-    <h1 class="header__title">Meeting Rooms</h1>
+    <h1 class="header__title">Get a room</h1>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="authorize-button" class="headerLoginButton">Authorize</button>
     <button id="signout-button" class="headerLoginButton" style="display: none;">Sign Out</button>
