Displaying user's booked meetings with a calendar icon that they can click on

--- a/index.html
+++ b/index.html
@@ -53,14 +53,18 @@
       <h2>Oops...No rooms available</h2>
       <h3>There are currently no available rooms.<br>Please try changing any filters and search again.</h3>
     </div>
-    <div class="card cardTemplate room" hidden>
-      <div class="room-key" hidden></div>
-      <div class="card-last-updated" hidden></div>
-      <div class="name"></div>
-      <div class="type"></div>
-      <div class="description"></div>
-      <div class="user-message"></div>
-      <button class="reserve-room-button"></button>
+    <div class="room-cards">
+        <div class="card cardTemplate room" hidden>
+          <div class="room-key" hidden></div>
+          <div class="card-last-updated" hidden></div>
+          <div class="name"></div>
+          <div class="type"></div>
+          <div class="description"></div>
+          <div class="user-message"></div>
+          <div class="user-action">
+            <button class="reserve-room-button"></button>
+          </div>
+        </div>
     </div>
   </main>
 
