Added toast greeting of the currently logged in user.

--- a/index.html
+++ b/index.html
@@ -95,9 +95,12 @@
     </svg>
   </div>
 
+  <div class="toast__container"></div>
+
   <!-- Uncomment the line below when ready to test with fake data -->
   <script src="config.js" async></script>
   <script src="scripts/model.js" async></script>
+  <script src="scripts/toast.js" async></script>
   <script src="scripts/app.js" async></script>
   <script id='google-api' async defer src="https://apis.google.com/js/api.js"></script>
 
