--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
 
   <header class="header">
     <h1 class="header__title">Meeting Rooms</h1>
-    <button id="30-minute-button">30 Mins</button>
-    <button id="hour-button">60 Mins</button>
-    <button id="90-minute-button">90 Mins</button>
-    <button id="2-hour-button">120 Mins</button>
+    <div class="dropdown">
+      <button id="trigger-dropdown" class="headerButton dropbtn" aria-label="time-dropdown"></button>
+        <div id="myDropdown" class="dropdown-content">
+          <a href="" id="30-minute-button">30 Mins</a>
+          <a href="" id="hour-button">60 Mins</a>
+          <a href="" id="90-minute-button">90 Mins</a>
+          <a href="" id="2-hour-button">120 Mins</a>
+        </div>
+    </div>
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="authorize-button" class="headerLoginButton">Authorize</button>
     <button id="signout-button" class="headerLoginButton" style="display: none;">Sign Out</button>
@@ -57,6 +62,7 @@
       <h2>Oops...No rooms available</h2>
       <h3>There are currently no available rooms.<br>Please try changing any filters and search again.</h3>
     </div>
+
     <div class="card cardTemplate room" hidden>
       <div class="room-key" hidden></div>
       <div class="card-last-updated" hidden></div>
