Script to build project for deployment.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Get a room</title>
-  <link rel="stylesheet" type="text/css" href="styles/inline.css">
+  <link rel="stylesheet" type="text/css" href="styles/inline.css?version=REPLACE_VERSION">
 
   <!-- TODO add manifest here -->
   <link rel="manifest" href="/manifest.json">
@@ -121,10 +121,10 @@
   <div class="toast__container"></div>
 
   <!-- Uncomment the line below when ready to test with fake data -->
-  <script src="config.js" async></script>
-  <script src="scripts/model.js" async></script>
-  <script src="scripts/toast.js" async></script>
-  <script src="scripts/app.js" async></script>
+  <script src="config.js?version=REPLACE_VERSION" async></script>
+  <script src="scripts/model.js?version=REPLACE_VERSION" async></script>
+  <script src="scripts/toast.js?version=REPLACE_VERSION" async></script>
+  <script src="scripts/app.js?version=REPLACE_VERSION" async></script>
   <script id='google-api' async defer src="https://apis.google.com/js/api.js"></script>
 
 </body>
