Added cancel button on filter menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <button id="butRefresh" class="headerButton" aria-label="Refresh"></button>
     <button id="butFilter" class="headerButton" aria-label="Filter"></button>
     <div class="filter-list" style="display: none;">
+        <a id="filter-cancel-button" class="close-thick" href="#">✖</a>
         <p>Time Duration</p>
         <div class="time-filter">
             <input id="time-value" type="range" class="time-filter-range" min="15" max="120" step="15" value="30" oninput="showTimeRangeVal(this.value)" onchange="showTimeRangeVal(this.value)"/>
