add time to events

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
           <div class="room-key" hidden></div>
           <div class="card-last-updated" hidden></div>
           <div class="name"></div>
+          <div class="meeting-time"></div>
           <div class="type"></div>
           <div class="description"></div>
           <div class="user-message"></div>
