Have the end time for booked room end on a 15 minute interval

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   <script src="scripts/toast.js?version=REPLACE_VERSION" async></script>
   <script src="scripts/app.js?version=REPLACE_VERSION" async></script>
   <script id='google-api' async defer src="https://apis.google.com/js/api.js"></script>
+  <script src="../lib/moment.min.js"></script>
 
 </body>
 </html>
