--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
   <!-- Uncomment the line below when ready to test with fake data -->
   <script src="config.js?version=REPLACE_VERSION" async></script>
   <script src="scripts/model.js?version=REPLACE_VERSION" async></script>
-  <script src="scripts/toast.js?version=REPLACE_VERSION" async></script>
   <script src="scripts/app.js?version=REPLACE_VERSION" async></script>
   <script id='google-api' async defer src="https://apis.google.com/js/api.js"></script>
   <script src="../lib/moment.min.js"></script>
+  <script src="../lib/toast.js" async></script>
 
 </body>
 </html>
